# cmake_googletest_gcov

./: CMakeLists.txt  README.md
inc/: cub.h
src/: CMakeLists.txt  cub.cc  main.cpp
test/src/: CMakeLists.txt  cub_test.cc
